# happy-hacking-gnu

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  default.nix
src/: functions.h  hidcomm.h  main.c
